[Harsh Vardhan]: added SecurityConfig file